<resources>
    <string name="app_name">Miioky</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="instacropper_crop">Crop</string>
    <string name="txt_empty" />
    <string name="txt_done">Done</string>
    <string name="txt_title_not_supported">Alert!</string>
    <string name="txt_msg_not_supported">Sorry, this device is not supported</string>
    <string name="txt_trimming_video">Processing Video…</string>
    <string name="txt_failed_to_trim">Failed to trim</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_dlah">\\</string>
    <string name="txt_smaller">Video should be smaller than</string>
    <string name="edit_video">Edit Video</string>
    <string name="txt_compress_video">Compressing Video…</string>
    <string name="txt_edt_video">Edit Video</string>
    <string name="open_file_location">Open file location?</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="create_your_account">No account yet? Create your account</string>
    <string name="password_reset_email_sent">Password reset email sent. Please check your inbox</string>
    <string name="failed_to_send_password_reset_email">Failed to send password reset email. Please check your email address.</string>
    <string name="phone_number">Phone</string>
    <string name="coma">,</string>
    <string name="hi_follow_me_on_miioky">Hi! Follow me on Miioky</string>
    <string name="this_number_is_not_valid">This number is not valid</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="no_connexion">You are not logged in!</string>
    <string name="you_have_saisine_phone">You entered the following phone number:</string>
    <string name="its_correct">Is it correct or do you want to change it?</string>
    <string name="modify">To modify</string>
    <string name="correct">Correct</string>
    <string name="msg_notification">You will receive a confirmation code for security reasons.</string>
    <string name="phone_number_not_valid">This phone number is not valid!</string>
    <string name="msg_send_code">Please wait, we will send a confirmation code to</string>
    <string name="msg_enter_code">Enter the confirmation code we sent to the</string>
    <string name="msg_resend_code">return code</string>
    <string name="exceeded_sms_quota">You have exceeded your SMS quota!</string>
    <string name="error_has_occured">An error has occurred!</string>
    <string name="wrong_code">Wrong code!</string>
    <string name="code_confirmation">confirmation code</string>
    <string name="next">Next</string>
    <string name="cropper">Cropping</string>
    <string name="name_and_password">FULL NAME</string>
    <string name="name">Name</string>
    <string name="town_and_quater">CITY AND NEIGHBORHOOD</string>
    <string name="write_real_town_and_quater_name">Make sure to write your city and neighborhood name correctly to make searching easier.</string>
    <string name="town_name">City you live in</string>
    <string name="your_town">Your city</string>
    <string name="your_current_city">Your current city</string>
    <string name="neighborhood_name">Neighborhood you live in</string>
    <string name="your_neighborhood">Your neighborhood</string>
    <string name="native_and_hometown">Your country and city of origin.</string>
    <string name="text_cant_be_update">You will no longer be able to change this information.</string>
    <string name="native_country_name">Your country of origin</string>
    <string name="your_native_country">Your country of origin</string>
    <string name="hometown_name">Your hometown</string>
    <string name="your_hometown">Your hometown</string>
    <string name="complet_your_profile">Complete your profile</string>
    <string name="real_name">It\'s better to use your real name so your friends can recognize you.</string>
    <string name="add_your_birthday">Add your date of birth</string>
    <string name="not_showing_birthday">It will not be displayed on your public profile.</string>
    <string name="day">day</string>
    <string-array name="month">
        <item>1,janvier</item>
        <item>2,fevrier</item>
        <item>3,mars</item>
        <item>4,avril</item>
        <item>5,mai</item>
        <item>6,juin</item>
        <item>7,juillet</item>
        <item>8,août</item>
        <item>9,septembre</item>
        <item>10,octobre</item>
        <item>11,novembre</item>
        <item>12,decembre</item>
    </string-array>
    <string name="year">Year</string>
    <string name="olds">olds</string>
    <string name="subscribe_ass">Register as</string>
    <string name="msg_update_username">You can always change your username later.</string>
    <string name="accept_condition">By clicking Sign Up you agree to our Terms of Use our Privacy Policy and our Cookie Policy.</string>
    <string name="subscribe">Register</string>
    <string name="back">Back</string>
    <string name="you_must_update_this_informations">You must change this information when you change cities or neighborhoods.</string>
    <string name="update_your_profile">Edit your Profile</string>
    <string name="signout">Logout</string>
    <string name="really_want_delet_your_account">Do you really want to delete your account?</string>
    <string name="really_want_disconnect">Do you really want to log out?</string>
    <string name="really_want_delete_challenge">Do you really want to delete this Challenge?</string>
    <string name="really_want_delete_one_publication">Do you really want to delete this post?</string>
    <string name="really_want_delete_item">Do you really want to delete this item?</string>
    <string name="really_want_unfollow">Are you sure you want to unsubscribe?</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="title_add_profile_photo">Add a profile picture</string>
    <string name="title_update_profile_photo">Change your profile picture</string>
    <string name="msg_add_profile_photo">Choose a profile picture to represent yourself on Miioky.</string>
    <string name="add">Add</string>
    <string name="msg_speeck_about_you">Tell your followers a little about yourself.</string>
    <string name="title_add_bio">Add a bio</string>
    <string name="title_update_bio">Edit your bio</string>
    <string name="title_update_displayname">Change your nickname</string>
    <string name="msg_update_displayname">Change your username so your followers can identify you.</string>
    <string name="modify_your_name">Change your username.</string>
    <string name="update">To modify</string>
    <string name="update_day">Update</string>
    <string name="made_post_in_group">made a post in the group</string>
    <string name="on_four">on 3</string>
    <string name="finish">FINISHED</string>
    <string name="suggestions_for_you">Suggestions for you</string>
    <string name="see">See</string>
    <string name="see_all">See all</string>
    <string name="see_minus">See less</string>
    <string name="seen_the">Seen the</string>
    <string name="seen_there">Seen there</string>
    <string name="seen_yesterday_at">Seen yesterday at</string>
    <string name="seen_an_hour_ago">Seen an hour ago</string>
    <string name="seen_just_now">Seen just now</string>
    <string name="follow">Follow</string>
    <string name="add_a_profile_photo">Add a profile picture</string>
    <string name="publish_a_story">Post a story</string>
    <string name="photos_and_videos">Photos and videos</string>
    <string name="if_u_share_photos_and_videos">If you share photos and videos they appear here.</string>
    <string name="share_ur_first_photo_or_video">Share your first photo or video</string>
    <string name="videos_fun">Funny videos</string>
    <string name="if_u_share_videos">If you share videos they appear here.</string>
    <string name="share_ur_first_video">Share your first video</string>
    <string name="l_v">V</string>
    <string name="l_s">S</string>
    <string name="rationale_storage">App needs access to your storage</string>
    <string name="from_miioky">Download Miioky and watch more posts…</string>
    <string name="saved">Saved</string>
    <string name="save_in_collection">Saved in a collection</string>
    <string name="save_in_gallery">Saved in the gallery</string>
    <string name="registration">Recordings</string>
    <string name="if_u_saved_publication">If you save a post it appears here…</string>
    <string name="tv_eliminate_suggestion">eliminate</string>
    <string name="miioky_will_definitely_remove_this_suggestion_for_you">Miioky will permanently remove this suggestion for you. You will no longer see posts from this source.</string>
    <string name="hide_suggestion">Hide suggestion?</string>
    <string name="tv_ok">All right</string>
    <string name="suggestion">Suggestions</string>
    <string name="group_that_might_interest_you">Groups that might interest you.</string>
    <string name="story">Story</string>
    <string name="are_u_sure_u_want_to_delete">Do you really want to delete this story?</string>
    <string name="views">Views</string>
    <string name="view">View</string>
    <string name="visits">Visits</string>
    <string name="deleted">Deleted!</string>
    <string name="delete">Delete</string>
    <string name="join">Join</string>
    <string name="photo_upload_failed">Download failed!</string>
    <string name="failed">Failure!</string>
    <string name="see_my_story">See my Stories</string>
    <string name="add_a_new_story">Add a new Story</string>
    <string name="see_my_challenge">See my Challenges</string>
    <string name="add_a_new_challenge">Ajouter un nouveau Challenge</string>
    <string name="Challenge_your_subscribers">Challenge your subscribers and they will have 24 hours to respond.</string>
    <string name="Challenge_group_members_subscribers">Challenge the group members and they will have 24 hours to respond.</string>
    <string name="members_of_group_photo_vote">Group members will vote for one of the photos.</string>
    <string name="members_of_group_video_vote">The group members will vote for one of the videos.</string>
    <string name="your_subscribers_photo_vote">Your followers will vote for one of the photos.</string>
    <string name="your_subscribers_video_vote">Your subscribers will vote for one of the videos.</string>
    <string name="send_to_all_members_of_group">Send to all members</string>
    <string name="republish_for_your_followers">PUBLISH FOR YOUR SUBSCRIBERS</string>
    <string name="publications">Publications</string>
    <string name="sexual">Sexual</string>
    <string name="violent">Violent</string>
    <string name="fake">Fake</string>
    <string name="hat_speech">Hate speech</string>
    <string name="others">Others</string>
    <string name="message_question1">message ?</string>
    <string name="show_password">Show password</string>
</resources>