<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp"
    android:background="@drawable/cadre_msg_dialog"
    >

    <ImageView
        android:id="@+id/iv_warning"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_baseline_warning_24"
        android:contentDescription="@null"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_warning"
        android:layout_marginStart="20dp"
        >

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/delete_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text"
            android:layout_marginStart="4dp"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/black"

            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/delete_count"
            android:text="@string/message_question1"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_warning"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_toStartOf="@id/tv_yes"
            android:background="@drawable/cadre_selected_text"
            android:backgroundTint="@color/blue_50"
            android:gravity="center"
            android:text="@string/txt_cancel"
            android:textColor="@color/black_semi_transparent"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/blue_600"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</RelativeLayout>